force-app/main/default/objects/Interface_Log_Report__c/Interface_Log_Report__c.object-meta.xml
<CustomObject>
    <description>Known errors resulting from processing an interface client request</description>
    <label>Interface Log Report</label>
    <nameField>
        <displayFormat>ILR-{0000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Log Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>