force-app/main/default/objects/Interface_Log_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>To capture Account on interface log report</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interface Log Reports</relationshipLabel>
    <relationshipName>Interface_Log_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>