force-app/main/default/objects/Interface_Log_Report__c/fields/ERP_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Record_Id__c</fullName>
    <description>To capture ERP Record Id</description>
    <label>ERP Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>