force-app/main/default/objects/Interface_Log_Report__c/fields/Full_Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Full_Error_Text__c</fullName>
    <description>To capture error message on interface log report</description>
    <label>Full Error Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>