force-app/main/default/objects/Interface_Log_Report__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <description>Which interface had a known error</description>
    <label>Interface</label>
    <length>255</length>
    <type>Text</type>
</CustomField>